feat: add rest endpoints for functionality
Reworked ReuqirementsInspectorInternalController
